Introduced new ErrorCode for failing requests in AutocompleteController